# grp01-algdatII

./: .gitignore  .travis.yml  CMakeLists.txt  Readme.md  TestPush.txt  TestPush22.txt  index.html  params.json  testMain.cpp
Dokumentation/html/: _i_o_parser_8h.html  _suf_tree_8h_source.html  _test_8cpp.html  _test_8h_source.html  _the_text_8cpp.html  _whitespace_parser_8cpp.html  class_parser-members.html  class_parser.html  class_suf_tree-members.html  class_test-members.html  class_text_word-members.html  class_text_word.html  class_the_text-members.html  class_the_text.html  (+188 more)
SuchenStatischenTexten/: SuchenStatischenTexten.sdf  SuchenStatischenTexten.sln  SufTree.cpp  SufTree.h  TextWord.cpp  TextWord.h  TheText.cpp  TheText.h  testMain.cpp
SuchenStatischenTexten/VS/: CMakeLists.txt
SuchenStatischenTexten/unittest_SuchenStatischenTexten/: CMakeLists.txt  GTestIOImport.txt  GTests.cpp  unittest_IOParser.cpp  unittest_IOParser.txt  unittest_SuchenStatischenTexten.vcxproj  unittest_SuchenStatischenTexten.vcxproj.filters  unittest_SufTree.cpp  unittest_TextWord.cpp  unittest_TheText.cpp  unittest_TheText.txt
SuchenStatischenTexten/unittest_SuchenStatischenTexten/Debug/: unittest_SuchenStatischenTexten.vcxprojResolveAssemblyReference.cache  vc120.idb
SuchenStatischenTexten/unittest_SuchenStatischenTexten/Debug/unittest.22227E4F.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  unittest_SuchenStatischenTexten.lastbuildstate
doc/: _g_tests_8cpp.html  _i_o_parser_8h_source.html  _parser_8h.html  _parser_8h_source.html  _search_it_8cpp.html  _suf_tree_8cpp.html  _suf_tree_8h.html  _test_8h.html  _text_word_8cpp.html  _text_word_8h.html  _text_word_8h_source.html  _the_text_8h.html  _the_text_8h_source.html  _whitespace_parser_8h.html  _whitespace_parser_8h_source.html  annotated.html  class_suf_tree.html  class_test.html  classes.html  classstd_1_1tr1_1_1gtest__internal_1_1_get.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_010_01_4.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_011_01_4-members.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_012_01_4.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_013_01_4-members.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_014_01_4.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_015_01_4.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_016_01_4-members.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_017_01_4.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_019_01_4-members.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_019_01_4.html  classstd_1_1tr1_1_1tuple-members.html  classstd_1_1tr1_1_1tuple_3_4-members.html  classtesting_1_1_assertion_result.html  classtesting_1_1_environment-members.html  classtesting_1_1_scoped_fake_test_part_result_reporter-members.html  classtesting_1_1_test-members.html  classtesting_1_1_test_event_listener-members.html  classtesting_1_1_test_event_listeners.html  classtesting_1_1_test_part_result_array.html  classtesting_1_1_test_part_result_reporter_interface-members.html  (+179 more)
(+89 files in other folders)
